--- a/src/styles/Layout/header.scss
+++ b/src/styles/Layout/header.scss
@@ -1,50 +1,51 @@
 .header {
-  padding: 10px 10px;
-  background-color: #53389e;
-  &__container {
-    width: 90vw;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    justify-content: space-between;
-  }
-  &__search {
-    width: 100%;
-    border: 1px solid #9575d6;
-    border-radius: 8px;
-    padding: 5px 16px;
-    display: flex;
-    gap: 6px;
-    &-input {
-      outline: none;
-      border: none;
-      background-color: transparent;
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 400;
-      width: 100%;
-      color: white;
-      &::placeholder {
-        color: #9575d6;
-      }
-    }
-  }
-  &__nav {
-    &-list {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 20px;
-    }
-    &-item {
-      padding: 5px;
-      cursor: pointer;
-      transition: all 0.2s ease-in-out;
-      &:hover {
-        background-color: #7f56d9;
-        border-radius: 6px;
-      }
-    }
-  }
+	padding: 15px 10px;
+	background-color: #53389e;
+	&__container {
+		width: 90vw;
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		gap: 45px;
+		justify-content: space-between;
+		max-width: 1440px;
+	}
+	&__search {
+		width: 67%;
+		border: 1px solid #9575d6;
+		border-radius: 8px;
+		padding: 5px 16px;
+		display: flex;
+		gap: 6px;
+		&-input {
+			outline: none;
+			border: none;
+			background-color: transparent;
+			font-size: 16px;
+			line-height: 24px;
+			font-weight: 400;
+			width: 100%;
+			color: white;
+			&::placeholder {
+				color: #9575d6;
+			}
+		}
+	}
+	&__nav {
+		&-list {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			gap: 20px;
+		}
+		&-item {
+			padding: 5px;
+			cursor: pointer;
+			transition: all 0.2s ease-in-out;
+			&:hover {
+				background-color: #7f56d9;
+				border-radius: 6px;
+			}
+		}
+	}
 }
