--- a/src/styles/components/Home.scss
+++ b/src/styles/components/Home.scss
@@ -34,17 +34,43 @@
       align-items: start;
       width: max-content;
       gap: 29px;
-
+      position: relative;
       .dropdown {
         display: flex;
         align-items: center;
         justify-content: center;
-        justify-content: space-between;
         padding: 12px;
         padding-right: 21px;
         border: 1px solid #d0d5dd;
         border-radius: 8px;
         width: 210px;
+        &-header {
+          display: flex;
+          width: 200px;
+          align-items: center;
+          justify-content: space-between;
+        }
+      }
+
+      .container {
+        .drop {
+          position: absolute;
+          background-color: #fff;
+          z-index: 1;
+          border-bottom: 1px solid #afb8c8;
+          width: 210px;
+          height: 300px;
+          display: flex;
+          flex-direction: column;
+          box-sizing: border-box;
+          padding: 20px;
+          &-name{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            
+          }
+        }
       }
     }
   }
