--- a/src/styles/Layout/layout.scss
+++ b/src/styles/Layout/layout.scss
@@ -1,4 +1,7 @@
 .layout {
   position: relative;
-
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
