--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 body {
-	font-family: 'Inter', sans-serif;
-	.wrapper {
-		width: 90vw;
-		margin: 0 auto;
-		max-width: 1440px;
-	}
+  font-family: "Inter", sans-serif;
+  .wrapper {
+    width: 90vw;
+    margin: 0 auto;
+    max-width: 1440px;
+  }
 }
