--- a/src/styles/components/Home.scss
+++ b/src/styles/components/Home.scss
@@ -64,11 +64,10 @@
           flex-direction: column;
           box-sizing: border-box;
           padding: 20px;
-          &-name{
+          &-name {
             display: flex;
             align-items: center;
             justify-content: space-between;
-            
           }
         }
       }
@@ -84,12 +83,40 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      user-select: none;
       gap: 3px;
+      box-sizing: border-box;
+
       .topCard {
         width: 100%;
-        img {
+        position: relative;
+        .cardImg {
           width: 100%;
           aspect-ratio: 1/1.2;
+          border-radius: 20px;
+        }
+        .loveCard {
+          position: absolute;
+          right: 15px;
+          top: 15px;
+          cursor: pointer;
+          &.active {
+            svg {
+              path {
+                fill: red;
+              }
+            }
+          }
+        }
+        .discount {
+          position: absolute;
+          bottom: 10px;
+          padding: 2px 3px;
+          border-radius: 20px;
+          width: max-content;
+          background-color: #fff6ed;
+          color: #c4320a;
+          left: 15px;
         }
       }
       .info {
