--- a/src/styles/components/SellerCard.scss
+++ b/src/styles/components/SellerCard.scss
@@ -42,6 +42,7 @@
       display: flex;
       flex-direction: column;
       gap: 40px;
+      margin-bottom: 50px;
       &__stats {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
